[package]
name = "fluvio-smartmodule-window"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
categories = ["wasm", "database", "encoding"]
keywords = ["streaming", "stream", "wasm", "fluvio"]
repository = "https://github.com/infinyon/fluvio"
description = "Used by Fluvio SmartModule"

[lib]
crate-type = ['lib']

[features]
use_serde = ["serde"]


[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true}
serde = { workspace = true,  features = ["derive"], optional = true }
fluvio-protocol = { workspace = true, features = [ "link"] }

[dev-dependencies]
serde_json = "1"