[package]
name = "fluvio-version-manager"
description = "Fluvio Version Manager"
version = "0.0.0"
publish = false
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "fvm"
path = "src/main.rs"

[dependencies]

# Workspace Dependencies
anyhow = { workspace = true }
clap = { workspace = true, features = ["std", "color", "help", "usage", "derive", "env"] }
colored = { workspace = true }
comfy-table = { workspace = true }
current_platform = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }

# Workspace Crates
fluvio-future = { workspace = true, features = ["subscriber", "attributes"] }
fluvio-hub-util = { workspace = true }

# GitHub release downloader
octocrab = "0.49"
reqwest = { version = "0.11", features = ["rustls-tls"] }
zip = "0.6"

[dev-dependencies]
fs_extra = "1.3.0"
