[package]
name = "poc-openmeter"
version = "0.0.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
serde = { workspace = true,  features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"]}
anyhow = { workspace = true }
cloudevents-sdk = { git = "https://github.com/infinyon/sdk-rust", branch = "fix_wasm",default-features = false }
#cloudevents-sdk = { path = "../../../sdk-rust", default-features = false }

fluvio-smartmodule = { workspace = true, features = ["smartmodule"] }
fluvio-smartmodule-window = { workspace = true, features = ["use_serde"]}