[package]
name = "window-helsinki"
version = "0.0.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
serde = { workspace = true,  features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"]}

fluvio-smartmodule = { workspace = true, features = ["smartmodule"] }
fluvio-smartmodule-window = { workspace = true, features = ["use_serde"]}